--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <div id = "app"></div>
-<!--<script type="text/javascript" charset="utf-8" th:src="@{/js/dist/main.bundle.js}"></script>-->
-<script type="text/javascript" charset="utf-8" src = "http://localhost:3000/dist/main.bundle.js"></script>
+<script type="text/javascript" charset="utf-8" th:src="@{/js/dist/main.bundle.js}"></script>
+<!--<script type="text/javascript" charset="utf-8" src = "http://localhost:3000/dist/main.bundle.js"></script>-->
 </body>
 </html>
